--- a/index.html
+++ b/index.html
@@ -195,6 +195,7 @@
   <a href="http://bangumi.bilibili.com/anime/2592" target="_blnak">学园孤岛<a>
     <br/>搞笑装逼番<a href="http://bangumi.bilibili.com/anime/3450" target="_blank">在下坂本，有何贵干</a>
     <a href="http://bangumi.bilibili.com/anime/980" target="_blank">MM一族</a>
+    <img src="https://i0.hdslb.com/bfs/bangumi/83d82954d76fab14154dc45118283d15a8b8d551.jpg@110w_144h_75Q_1c.webp"/>
     <div>电音推荐</div>
     Rubik China-X China-O China-PiPa 13 months
    <embed height="415" width="544" quality="high" allowfullscreen="true" type="application/x-shockwave-flash" src="//static.hdslb.com/miniloader.swf" flashvars="aid=17680937&page=1" pluginspage="//www.adobe.com/shockwave/download/download.cgi?P1_Prod_Version=ShockwaveFlash"></embed>
