--- a/index.html
+++ b/index.html
@@ -201,9 +201,13 @@
     Rubik China-X China-O China-PiPa 13 months
    <embed height="415" width="544" quality="high" allowfullscreen="true" type="application/x-shockwave-flash" src="//static.hdslb.com/miniloader.swf" flashvars="aid=17680937&page=1" pluginspage="//www.adobe.com/shockwave/download/download.cgi?P1_Prod_Version=ShockwaveFlash"></embed>
     如果播放器播放不了 请选择IE兼容模式 视频地址<a href="https://www.bilibili.com/video/av17680937/" target="_blank">av17680937</a>
-    <a href="https://www.bilibili.com/video/av18058228/" target="_blank"><img src="https://i2.hdslb.com/bfs/archive/5acb7ae048f412d291fe898cee65214a52de1a6c.jpg"/></a>
+    <a href="https://www.bilibili.com/video/av18058228/" target="_blank"><img id="kawayi" src="https://i2.hdslb.com/bfs/archive/5acb7ae048f412d291fe898cee65214a52de1a6c.jpg"/></a>
     三分钟教你做Kawayi Bass
     </body>
-  
+  <style>
+    #kawayi
+          {
+           width:300px;
+             }</style>
   
 </html>
