--- a/index.html
+++ b/index.html
@@ -205,6 +205,8 @@
     <a href="https://www.bilibili.com/video/av18058228/" target="_blank"><img id="kawayi" src="https://i2.hdslb.com/bfs/archive/5acb7ae048f412d291fe898cee65214a52de1a6c.jpg"/></a>
     <br/>
     三分钟教你做Kawayi Bass
+    <a href="http://www.kisssub.org/" target="_blank">爱恋动漫BT下载</a>
+    <a href="http://www.gal123.com/" target="_blank">绅士导航</a>
     </body>
   <style>
     #kawayi
