--- a/index.html
+++ b/index.html
@@ -129,6 +129,8 @@
     <a href="https://www.zhaogepu.com/" target="_blank">找歌谱网</a>
     <a href="https://www.zhaogepu.com/jianpu/120730.html" target="_blank">团子大家族简谱</a>
     <a href="http://music.163.com/" target="_blank">网易云音乐</a>
+  <!--绘画类-->
+  <a href="https://www.gracg.com/" target="_blank">涂鸦王国</a>
   <!--ACG社交类-->
   <a class="mainlink" href="http://iirose.com/" target="_blank">蔷薇花园聊天室</a>
   <a class="mainlink" href="http://www.jpbeta.net/" target="_blank">JPbeta多元化日本文化资讯站</a>
