--- a/index.html
+++ b/index.html
@@ -134,7 +134,8 @@
   <!--ACG社交类-->
   <a class="mainlink" href="http://iirose.com/" target="_blank">蔷薇花园聊天室</a>
   <a class="mainlink" href="http://www.jpbeta.net/" target="_blank">JPbeta多元化日本文化资讯站</a>
-  
+  <!--趣味测试类-->
+  <a href="http://test.3uol.com/2561.html" target="_blank">测测你是否有一个少女心</a>  
   </nav>
   <audio id="backgroundmusic" volume="0.3"
          src="/music/elochka.mp3" controls="controls"></audio><!--背景音乐-->
