--- a/index.html
+++ b/index.html
@@ -210,6 +210,9 @@
     三分钟教你做Kawayi Bass
     <a href="http://www.kisssub.org/" target="_blank">爱恋动漫BT下载</a>
     <a href="http://www.gal123.com/" target="_blank">绅士导航</a>
+    <br/>
+    <a href="https://www.bilibili.com/video/av15111628/" target="_blank">
+      <img src="https://i0.hdslb.com/bfs/archive/0d37118011e987f7e6a7eb79be8c8bc279bacf10.jpg"/></a>动画同好会op官方mv
     </body>
   <style>
     #kawayi
