--- a/index.html
+++ b/index.html
@@ -200,6 +200,7 @@
   <img src="https://i0.hdslb.com/bfs/bangumi/1ba189ac8338939b7e07f3bae072a32efe6d8c1a.jpg@110w_144h_75Q_1c.webp"/>
   <a href="http://bangumi.bilibili.com/anime/2592" target="_blnak">学园孤岛<a>
     <br/>搞笑装逼番<a href="http://bangumi.bilibili.com/anime/3450" target="_blank">在下坂本，有何贵干</a>
+    <img src="https://i0.hdslb.com/bfs/bangumi/14ba6643f22405e2777cca992002cc6411601334.jpg_225x300.jpg"/>
     <a href="http://bangumi.bilibili.com/anime/980" target="_blank">MM一族</a>
     <img src="https://i0.hdslb.com/bfs/bangumi/83d82954d76fab14154dc45118283d15a8b8d551.jpg@110w_144h_75Q_1c.webp"/>
     <div>电音推荐</div>
