--- a/index.html
+++ b/index.html
@@ -218,6 +218,8 @@
       <img class="acg" src="https://i0.hdslb.com/bfs/archive/0d37118011e987f7e6a7eb79be8c8bc279bacf10.jpg"/></a>动画同好会op官方mv
    <br/>
     <a href="http://www.acgdoge.net/archives/23804" target="_blank">小偷终末旅行，俄罗斯男子开装甲车去便利店偷走一瓶酒</a>
+    <<br/>
+    <a href="http://2chcn.com/" target="_blank">2ch中文网</a>
     </body>
   <style>
     .acg{
