--- a/index.html
+++ b/index.html
@@ -119,6 +119,8 @@
     <!--游戏类-->
     <a class="mainlink" href="https://cn.codecombat.com/" target="_blank">编程游戏</a>
     <a class="mainlink" href="https://www.cngal.org/" target=""_blank>中文GalGame资源站</a>
+    <!--轻小说-->
+    <a class="mainlink" href="http://book.suixw.com/" target="_blank">随想轻小说</a>
     </br>
    <!--弹幕类-->
     <a class="mainlink" href="http://www.bilibili.com" target="_blank">哔哩哔哩</a>
