--- a/index.html
+++ b/index.html
@@ -222,6 +222,7 @@
     <a href="http://www.acgdoge.net/archives/23804" target="_blank">小偷终末旅行，俄罗斯男子开装甲车去便利店偷走一瓶酒</a>
     <<br/>
     <a href="http://2chcn.com/" target="_blank">2ch中文网</a>
+    <a href="http://cn.moepic.net/" target="_blank" ><img src="http://cn.moepic.net/Images/slide1.jpg"/></a><!--幻域图床-->
     </body>
   <style>
     .acg{
