--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
     <a class="mainlink" href="https://github.com" target="_blank">github开源社区</a>
 <a class="mainlink" href="http:www.doyoudo.com" target="_blank" >doyoudo自学网站</a>
     <a class="mainlink">实用工具</a>
+    <a class="mainlink" href="https://wj.qq.com/" target="_blank">腾讯问卷</a>
     <a class="mainlink" href="http://manshenqi.com/help.html" target="_blank">浏览器插件——漫神器</a>
     <a class="mainlink" href="http://editor.method.ac/#copy" target="_blank">svg编辑器</a>
     <a class="mainlink" href="http://www.52ij.com/tools/fangcha/" target="_blank">方差计算器</a>
