--- a/index.html
+++ b/index.html
@@ -6,10 +6,7 @@
   <link rel="stylesheet" href="/css/test.css"/>
   <script src="/js/test.js"></script>
   <title>1288hh的个人小站</title>
-  <script>function seve(){
-      s=document.getElementById("backgroundmusic");
-      s.src=/music/Time.mp3;
-      s.play();}</script>
+  
   <style>nav{
              background:orange;
     }
@@ -142,8 +139,8 @@
   <!--趣味测试类-->
   <a href="http://test.3uol.com/2561.html" target="_blank">测测你是否有一个少女心</a>  
   </nav>
-  <audio id="backgroundmusic" volume="0.3"
-         src="/music/elochka.mp3" controls="controls"></audio><!--背景音乐-->
+  <!--背景音乐-->
+  <audio id="backgroundmusic" src="http://link.hhtjim.com/163/496869523.mp3" controls="controls"></audio><!--背景音乐-->
 <div style="background:pink;width:500px;">播放列表
   <ol>
 <li id="fallen star">fallen star</li>
