--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
     <a class="mainlink" href="https://www.cngal.org/" target=""_blank>中文GalGame资源站</a>
     <!--轻小说-->
     <a class="mainlink" href="http://book.suixw.com/" target="_blank">随想轻小说</a>
+    <a class="mainlink" href="http://www.360doc.com/content/15/0219/20/9060464_449471573.shtml" target="_blank">网易云音乐MP3网址外链转换</a>
     </br>
    <!--弹幕类-->
     <a class="mainlink" href="http://www.bilibili.com" target="_blank">哔哩哔哩</a>
