--- a/index.html
+++ b/index.html
@@ -205,7 +205,10 @@
     <img src="https://i0.hdslb.com/bfs/bangumi/14ba6643f22405e2777cca992002cc6411601334.jpg_225x300.jpg"/>
     <a href="http://bangumi.bilibili.com/anime/980" target="_blank">MM一族</a>
     <img src="https://i0.hdslb.com/bfs/bangumi/83d82954d76fab14154dc45118283d15a8b8d551.jpg@110w_144h_75Q_1c.webp"/>
-    <div>电音推荐</div>
+    <br/>
+    <a href="https://bangumi.bilibili.com/anime/6432?from=search&seid=7761475212822567032" target="_blank">调教咖啡厅</a>
+    <img src="https://i0.hdslb.com/bfs/bangumi/f0043f638a4ce8307e0a299349d6d6beb4e7b97b.jpg_225x300.jpg"/>
+    <!--电音推荐-->
     Rubik China-X China-O China-PiPa 13 months
    <embed height="415" width="544" quality="high" allowfullscreen="true" type="application/x-shockwave-flash" src="//static.hdslb.com/miniloader.swf" flashvars="aid=17680937&page=1" pluginspage="//www.adobe.com/shockwave/download/download.cgi?P1_Prod_Version=ShockwaveFlash"></embed>
     如果播放器播放不了 请选择IE兼容模式 视频地址<a href="https://www.bilibili.com/video/av17680937/" target="_blank">av17680937</a>
