--- a/index.html
+++ b/index.html
@@ -196,9 +196,10 @@
   <a href="http://mcfuzhu.net/" target="_blank">MC服主网</a>
   <a href="https://aternos.org/zh-TW/" target="_blank">我的世界免费服务器</a>
   <div>好番推荐</div>
-  <a href="http://bangumi.bilibili.com/anime/413" tagret="_blank">变态王子与不笑猫</a>
+  <a href="http://bangumi.bilibili.com/anime/413" tagret="_blank">《变态王子与不笑猫》</a>
+  <a href="" target="_blank">《笨蛋，测试，召唤兽》</a>
   <img src="https://i0.hdslb.com/bfs/bangumi/ac94186b0e560932ea4f475348d410db0c53e28a.jpg_225x300.jpg"/>
-  <a href="http://bangumi.bilibili.com/anime/425" target="_blank">某科学的超电磁炮</a>
+  <a href="http://bangumi.bilibili.com/anime/425" target="_blank">《某科学的超电磁炮》</a>
   <img src="https://i0.hdslb.com/bfs/bangumi/1ba189ac8338939b7e07f3bae072a32efe6d8c1a.jpg@110w_144h_75Q_1c.webp"/>
   <a href="http://bangumi.bilibili.com/anime/2592" target="_blnak">学园孤岛<a>
     <br/>搞笑装逼番<a href="http://bangumi.bilibili.com/anime/3450" target="_blank">在下坂本，有何贵干</a>
