--- a/index.html
+++ b/index.html
@@ -227,6 +227,15 @@
     <<br/>
     <a href="http://2chcn.com/" target="_blank">2ch中文网</a>
     <a href="http://cn.moepic.net/" target="_blank" ><img class="acg" src="http://cn.moepic.net/Images/slide1.jpg"/></a><!--幻域图床-->
+   <!--看板娘测试-->
+    <div>
+      <button onclick="summmon()">召唤</button>
+      <img id="kan-ban-niang" src="" alt="看板娘"/>
+    </div>
+    <script>
+      function summon(){
+               .dislplay=inline-block;
+      } </script>
     </body>
   <style>
     .acg{
