--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
     <!--轻小说-->
     <a class="mainlink" href="http://book.suixw.com/" target="_blank">随想轻小说</a>
     <a class="mainlink" href="http://www.360doc.com/content/15/0219/20/9060464_449471573.shtml" target="_blank">网易云音乐MP3网址外链转换</a>
+    <a class="mainlink" href="ngnl.jp" target="_blank">No game No life-游戏人生官方网站</a>
     </br>
    <!--弹幕类-->
     <a class="mainlink" href="http://www.bilibili.com" target="_blank">哔哩哔哩</a>
