--- a/index.html
+++ b/index.html
@@ -217,6 +217,9 @@
     <a href="https://bangumi.bilibili.com/anime/6432?from=search&seid=7761475212822567032" target="_blank">《调教咖啡厅》</a>
     <img src="https://i0.hdslb.com/bfs/bangumi/f0043f638a4ce8307e0a299349d6d6beb4e7b97b.jpg_225x300.jpg"/>
     <br/>
+    <a href="https://bangumi.bilibili.com/anime/184?from=search&seid=15477047233646136821" target="_blank">《No game,No life》</a>
+       <img src="https://i0.hdslb.com/bfs/bangumi/f7175cd20de509e2bfd43255c28cf4e24841480d.jpg_225x300.jpg"/>
+    <br/>
     日常搞笑番：《笨》、《漫画家与助手》
     <a href="" target="_blank">《New Game》</a>
     <!--动漫op音乐推荐-->
@@ -254,6 +257,11 @@
     <div>
       <button onclick="summmon()">召唤</button>
       <img id="kan-ban-niang" src="" alt="看板娘"/>
+    </div>
+    <!--二次元动画梗-->
+    <div>
+      鱼，好大的鱼，虎纹鲨鱼——<a href="https://bangumi.bilibili.com/anime/184?from=search&seid=15477047233646136821" target="_blank">《No game,No life》</a>(《游戏人生》)<br/>
+      螺旋升天，法力无边——<a href="https://bangumi.bilibili.com/anime/5800?from=search&seid=5968953484946446094" target="_blank">《小林家的龙女仆》</a>
     </div>
     <script>
       function summon(){
