--- a/index.html
+++ b/index.html
@@ -197,7 +197,8 @@
   <div>我的世界相关网站</div>
   <a href="http://mcfuzhu.net/" target="_blank">MC服主网</a>
   <a href="https://aternos.org/zh-TW/" target="_blank">我的世界免费服务器</a>
-  <div>好番推荐</div>
+  <!--好番推荐-->
+  <div id="suggest-animation">好番推荐
   <a href="http://bangumi.bilibili.com/anime/413" tagret="_blank">《变态王子与不笑猫》</a>
   
   <a href="" target="_blank">《笨蛋，测试，召唤兽》</a>
@@ -216,12 +217,11 @@
     
     <a href="https://bangumi.bilibili.com/anime/6432?from=search&seid=7761475212822567032" target="_blank">《调教咖啡厅》</a>
     <img src="https://i0.hdslb.com/bfs/bangumi/f0043f638a4ce8307e0a299349d6d6beb4e7b97b.jpg_225x300.jpg"/>
-    <br/>
     <a href="https://bangumi.bilibili.com/anime/184?from=search&seid=15477047233646136821" target="_blank">《No game,No life》</a>
        <img src="https://i0.hdslb.com/bfs/bangumi/f7175cd20de509e2bfd43255c28cf4e24841480d.jpg_225x300.jpg"/>
     <br/>
     日常搞笑番：《笨》、《漫画家与助手》
-    <a href="" target="_blank">《New Game》</a>
+    <a href="" target="_blank">《New Game》</a></div>
     <!--动漫op音乐推荐-->
     <div>
     动漫op音乐推荐：《调教咖啡厅》、《约会大作战》、《某科学的超电磁炮》、《变态王子与不笑猫》、《超次元，海王星》、《学园孤岛》、《大神与七个伙伴》
@@ -271,9 +271,12 @@
   <style>
     .acg{
       width:300px;}
-    #kawayi
-          {
-           width:300px;
-             }</style>
+    #kawayi {
+       width:300px;
+             }
+    #suggest-animation{
+       width:400px;
+    }
+  </style>
   
 </html>
