--- a/index.html
+++ b/index.html
@@ -210,6 +210,8 @@
   <a href="http://bangumi.bilibili.com/anime/2592" target="_blnak">《学园孤岛》<a>
     <br/>搞笑装逼番<a href="http://bangumi.bilibili.com/anime/3450" target="_blank">《在下坂本，有何贵干》</a>
     <img src="https://i0.hdslb.com/bfs/bangumi/14ba6643f22405e2777cca992002cc6411601334.jpg_225x300.jpg"/>
+      <a href="https://bangumi.bilibili.com/anime/5027?from=search&seid=14874031288505190629" target="_blank">《New Game》</a>
+    <img src="https://i0.hdslb.com/bfs/bangumi/f62141fc96b146532480be8851efc8c3a94eedec.jpg_225x300.jpg"/>
     
     <a href="http://bangumi.bilibili.com/anime/980" target="_blank">《MM一族》</a>
     <img src="https://i0.hdslb.com/bfs/bangumi/83d82954d76fab14154dc45118283d15a8b8d551.jpg@110w_144h_75Q_1c.webp"/>
@@ -219,9 +221,23 @@
     <img src="https://i0.hdslb.com/bfs/bangumi/f0043f638a4ce8307e0a299349d6d6beb4e7b97b.jpg_225x300.jpg"/>
     <a href="https://bangumi.bilibili.com/anime/184?from=search&seid=15477047233646136821" target="_blank">《No game,No life》</a>
        <img src="https://i0.hdslb.com/bfs/bangumi/f7175cd20de509e2bfd43255c28cf4e24841480d.jpg_225x300.jpg"/>
+    <a href="" target="_blank">《可塑性记忆》</a>
+    <img src="https://i0.hdslb.com/bfs/bangumi/3e688cd89f778968bdf6f6d9ca6f3d20b76f04ea.jpg_225x300.jpg"/>
     <br/>
     日常搞笑番：《笨》、《漫画家与助手》
-    <a href="" target="_blank">《New Game》</a></div>
+  </div>
+    <!--游戏推荐-->
+    <div id="suggest-game">
+      <a href="https://www.mojang.com/" target="_blank">我的世界</a>
+      <a>机械迷城</a>
+      <a>涂鸦上帝——闪电</a>
+      <a>纪念碑谷</a>
+      <a>纪念碑谷2</a>
+      <a>星途少女</a>
+      <a>洛克王国</a>
+      <a>小鳄鱼爱洗澡</a>
+      <a>植物大战僵尸2</a>
+    </div>
     <!--动漫op音乐推荐-->
     <div>
     动漫op音乐推荐：《调教咖啡厅》、《约会大作战》、《某科学的超电磁炮》、《变态王子与不笑猫》、《超次元，海王星》、《学园孤岛》、《大神与七个伙伴》
@@ -274,8 +290,8 @@
     #kawayi {
        width:300px;
              }
-    #suggest-animation{
-       width:400px;
+    #suggest-animation,#suggest-game{
+      display:inline-block;
     }
   </style>
   
