--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   <script src="/js/test.js"></script>
   <title>1288hh的个人小站</title>
   
-  <style>nav{
+  <style>
+    img{width:100px;}
+    nav{
              background:orange;
     }
     /*导航栏链接样式*/
@@ -292,6 +294,7 @@
              }
     #suggest-animation,#suggest-game{
       display:inline-block;
+      width:400px;
     }
   </style>
   
