--- a/index.html
+++ b/index.html
@@ -292,10 +292,13 @@
     #kawayi {
        width:300px;
              }
-    #suggest-animation,#suggest-game{
+    #suggest-animation{
       display:inline-block;
       width:400px;
     }
+    #suggest-game{
+      display:inline-block;
+      width:400px
   </style>
   
 </html>
