--- a/index.html
+++ b/index.html
@@ -202,31 +202,23 @@
   <!--好番推荐-->
   <div id="suggest-animation">好番推荐
   <a href="http://bangumi.bilibili.com/anime/413" tagret="_blank">《变态王子与不笑猫》</a>
-  
   <a href="" target="_blank">《笨蛋，测试，召唤兽》</a>
   <img src="https://i0.hdslb.com/bfs/bangumi/ac94186b0e560932ea4f475348d410db0c53e28a.jpg_225x300.jpg"/>
- 
   <a href="http://bangumi.bilibili.com/anime/425" target="_blank">《某科学的超电磁炮》</a>
   <img src="https://i0.hdslb.com/bfs/bangumi/1ba189ac8338939b7e07f3bae072a32efe6d8c1a.jpg@110w_144h_75Q_1c.webp"/>
- 
   <a href="http://bangumi.bilibili.com/anime/2592" target="_blnak">《学园孤岛》<a>
-    <br/>搞笑装逼番<a href="http://bangumi.bilibili.com/anime/3450" target="_blank">《在下坂本，有何贵干》</a>
+   搞笑装逼番<a href="http://bangumi.bilibili.com/anime/3450" target="_blank">《在下坂本，有何贵干》</a>
     <img src="https://i0.hdslb.com/bfs/bangumi/14ba6643f22405e2777cca992002cc6411601334.jpg_225x300.jpg"/>
       <a href="https://bangumi.bilibili.com/anime/5027?from=search&seid=14874031288505190629" target="_blank">《New Game》</a>
     <img src="https://i0.hdslb.com/bfs/bangumi/f62141fc96b146532480be8851efc8c3a94eedec.jpg_225x300.jpg"/>
-    
     <a href="http://bangumi.bilibili.com/anime/980" target="_blank">《MM一族》</a>
     <img src="https://i0.hdslb.com/bfs/bangumi/83d82954d76fab14154dc45118283d15a8b8d551.jpg@110w_144h_75Q_1c.webp"/>
-    <br/>
-    
     <a href="https://bangumi.bilibili.com/anime/6432?from=search&seid=7761475212822567032" target="_blank">《调教咖啡厅》</a>
     <img src="https://i0.hdslb.com/bfs/bangumi/f0043f638a4ce8307e0a299349d6d6beb4e7b97b.jpg_225x300.jpg"/>
     <a href="https://bangumi.bilibili.com/anime/184?from=search&seid=15477047233646136821" target="_blank">《No game,No life》</a>
        <img src="https://i0.hdslb.com/bfs/bangumi/f7175cd20de509e2bfd43255c28cf4e24841480d.jpg_225x300.jpg"/>
     <a href="" target="_blank">《可塑性记忆》</a>
     <img src="https://i0.hdslb.com/bfs/bangumi/3e688cd89f778968bdf6f6d9ca6f3d20b76f04ea.jpg_225x300.jpg"/>
-    <br/>
-    日常搞笑番：《笨》、《漫画家与助手》
   </div>
     <!--游戏推荐-->
     <div id="suggest-game">
