--- a/index.html
+++ b/index.html
@@ -219,9 +219,7 @@
        <img src="https://i0.hdslb.com/bfs/bangumi/f7175cd20de509e2bfd43255c28cf4e24841480d.jpg_225x300.jpg"/>
     <a href="" target="_blank">《可塑性记忆》</a>
     <img src="https://i0.hdslb.com/bfs/bangumi/3e688cd89f778968bdf6f6d9ca6f3d20b76f04ea.jpg_225x300.jpg"/>
-  </div>
-    <!--游戏推荐-->
-    <div id="suggest-game">
+  </div><div id="suggest-game"><!--游戏推荐-->
       <a href="https://www.mojang.com/" target="_blank">我的世界</a>
       <a>机械迷城</a>
       <a>涂鸦上帝——闪电</a>
