--- a/index.html
+++ b/index.html
@@ -195,10 +195,6 @@
     height:800px;
     width:480px;
     }</style>
-  <!--我的世界-->
-  <div>我的世界相关网站</div>
-  <a href="http://mcfuzhu.net/" target="_blank">MC服主网</a>
-  <a href="https://aternos.org/zh-TW/" target="_blank">我的世界免费服务器</a>
   <!--好番推荐-->
   <div id="suggest-animation">好番推荐
   <a href="http://bangumi.bilibili.com/anime/413" tagret="_blank">《变态王子与不笑猫》</a>
@@ -270,7 +266,10 @@
     <div>
       鱼，好大的鱼，虎纹鲨鱼——<a href="https://bangumi.bilibili.com/anime/184?from=search&seid=15477047233646136821" target="_blank">《No game,No life》</a>(《游戏人生》)<br/>
       螺旋升天，法力无边——<a href="https://bangumi.bilibili.com/anime/5800?from=search&seid=5968953484946446094" target="_blank">《小林家的龙女仆》</a>
-    </div>
+    </div>  <!--我的世界-->
+  <div>我的世界相关网站
+  <a href="http://mcfuzhu.net/" target="_blank">MC服主网</a>
+    <a href="https://aternos.org/zh-TW/" target="_blank">我的世界免费服务器</a></div>
     <script>
       function summon(){
                .dislplay=inline-block;
