--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
   </div><div id="suggest-game"><!--游戏推荐-->
       <a href="https://www.mojang.com/" target="_blank">我的世界</a>
       <a>机械迷城</a>
-      <a>涂鸦上帝——闪电</a>
+      <a>涂鸦上帝——闪电<img src="https://ss1.bdstatic.com/70cFvXSh_Q1YnxGkpoWK1HF6hhy/it/u=1718249484,1805826979&fm=27&gp=0.jpg"/</a>
       <a>纪念碑谷</a>
       <a>纪念碑谷2</a>
       <a>星途少女</a>
