--- a/index.html
+++ b/index.html
@@ -270,6 +270,11 @@
   <div>我的世界相关网站
   <a href="http://mcfuzhu.net/" target="_blank">MC服主网</a>
     <a href="https://aternos.org/zh-TW/" target="_blank">我的世界免费服务器</a></div>
+    
+    
+    <div>
+      免费开源的音源插件：详情请点击此链接：<a href="https://www.midifan.com/modulenews-detailview-28693.htm" target="_blank"></a>
+    </div>
     <script>
       function summon(){
                .dislplay=inline-block;
