--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
     
     
     <div>
-      免费开源的音源插件：详情请点击此链接：<a href="https://www.midifan.com/modulenews-detailview-28693.htm" target="_blank"></a>
+      免费开源的音源插件：详情请点击此链接：<a href="https://www.midifan.com/modulenews-detailview-28693.htm" target="_blank">https://www.midifan.com/modulenews-detailview-28693.htm</a>
     </div>
     <script>
       function summon(){
