--- a/index.html
+++ b/index.html
@@ -274,6 +274,7 @@
     
     <div>
       免费开源的音源插件：详情请点击此链接：<a href="https://www.midifan.com/modulenews-detailview-28693.htm" target="_blank">https://www.midifan.com/modulenews-detailview-28693.htm</a>
+     <img src="https://image.midifan.com/data/attach/album/2018/0122/6123_1516602561.jpg"/>
     </div>
     <script>
       function summon(){
