--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>1288hh的个人小站</title>
   
   <style>
-    img{width:100px;}
+    {width:100px;}
     nav{
              background:orange;
     }
