--- a/index.html
+++ b/index.html
@@ -275,6 +275,9 @@
     <div>
       免费开源的音源插件：详情请点击此链接：<a href="https://www.midifan.com/modulenews-detailview-28693.htm" target="_blank">https://www.midifan.com/modulenews-detailview-28693.htm</a>
      <img src="https://image.midifan.com/data/attach/album/2018/0122/6123_1516602561.jpg"/>
+      <p>Pure Chords 是一个新的 Android 应用，它可以让你在 Android 手机或平板上控制任意兼容 MIDI 的设备。——转自Midifan </p>
+      <p>详情请点击：<a href="https://www.midifan.com/modulenews-detailview-28636.htm" target="_blank">https://www.midifan.com/modulenews-detailview-28636.htm</a></p>
+      <img src="https://image.midifan.com/data/attach/album/2018/0117/5337_1516174082_thumb.png"/>
     </div>
     <script>
       function summon(){
