--- a/index.html
+++ b/index.html
@@ -219,10 +219,10 @@
       <a href="https://www.mojang.com/" target="_blank">我的世界</a>
       <a>机械迷城</a>
       <a>涂鸦上帝——闪电<img src="https://ss1.bdstatic.com/70cFvXSh_Q1YnxGkpoWK1HF6hhy/it/u=1718249484,1805826979&fm=27&gp=0.jpg"/</a>
-      <a>纪念碑谷</a>
+      <a>纪念碑谷</a><img src="http://t12.baidu.com/it/u=2436340637,2959884975&fm=58"/>
       <a>纪念碑谷2</a>
       <a>星途少女</a>
-      <a>洛克王国</a>
+      <a>洛克王国</a><img src="http://t10.baidu.com/it/u=2957230950,3989048635&fm=96"/>
       <a>小鳄鱼爱洗澡</a>
       <a>植物大战僵尸2</a>
     </div>
