--- a/index.html
+++ b/index.html
@@ -294,7 +294,8 @@
       width:400px;
     }
     #suggest-game{
-      display:inline-block;}
+      display:inline-block;
+      width:500px;}
     .game{width:120px;}
   </style>
   
