--- a/index.html
+++ b/index.html
@@ -277,6 +277,8 @@
       <p>Pure Chords 是一个新的 Android 应用，它可以让你在 Android 手机或平板上控制任意兼容 MIDI 的设备。——转自Midifan </p>
       <p>详情请点击：<a href="https://www.midifan.com/modulenews-detailview-28636.htm" target="_blank">https://www.midifan.com/modulenews-detailview-28636.htm</a></p>
       <img src="https://image.midifan.com/data/attach/album/2018/0117/5337_1516174082_thumb.png"/>
+      <br/>
+      <a href="https://www.midifan.com/modulearticle-detailview-5846.htm" target="_blank">挑选你的第一台合成器——转自Midifan</a>
     </div>
     <script>
       function summon(){
