--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@
 <li id="River">River-Axero</li>
   </ol>
     </div>
+  <a href="http://survey2.163.com/htmlmobile/electronic_music_survey/paper.html?uid=341723976" target="_blank">网易云用户调查问卷</a>
   <font style="float:right;">在线计算器</font><br>
     <!--在线计算器显示屏-->
     <div style="height:50px;border:1px solid;width:100px;float:right;">sda</div>
