--- a/index.html
+++ b/index.html
@@ -280,6 +280,7 @@
       <img src="https://image.midifan.com/data/attach/album/2018/0117/5337_1516174082_thumb.png"/>
       <br/>
       <a href="https://www.midifan.com/modulearticle-detailview-5846.htm" target="_blank">挑选你的第一台合成器——转自Midifan</a>
+      <p>开源免费音乐工作站软件：<a href="https://helioworkstation.com/" target="_blank">Heillo<img src="https://helioworkstation.com/favicon-32x32.png"/></a></p>
     </div>
     <script>
       function summon(){
