--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
       <a>纪念碑谷</a><img src="http://t12.baidu.com/it/u=2436340637,2959884975&fm=58"/>
       <a>纪念碑谷2</a>
       <a>星途少女</a>
-      <a>洛克王国</a><img src="http://t10.baidu.com/it/u=2957230950,3989048635&fm=96"/>
+      <a>洛克王国</a><a href="http://17roco.qq.com/" target="_blank"><img src="http://t10.baidu.com/it/u=2957230950,3989048635&fm=96"/></a>
       <a>小鳄鱼爱洗澡</a>
       <a>植物大战僵尸2</a>
     </div>
