--- a/index.html
+++ b/index.html
@@ -284,6 +284,15 @@
       <a href="https://www.midifan.com/modulearticle-detailview-5846.htm" target="_blank">挑选你的第一台合成器——转自Midifan</a>
       <p>开源免费音乐工作站软件：<a href="https://helioworkstation.com/" target="_blank">Heillo<img src="https://helioworkstation.com/favicon-32x32.png"/></a></p>
     </div>
+    <div>
+      <!--仿nanoloop-->
+      <div class="nine-block"></div><div class="nine-block"></div><div class="nine-block"></div> 
+      <div class="nine-block"></div> 
+      <div class="nine-block"></div> <div class="nine-block"></div> <div class="nine-block"></div> <div class="nine-block"></div> 
+      <div class="nine-block"></div> 
+    </div><style>
+    .nine-block{width:20px;height:20px;display:inline-block;}
+    </style>
     <script>
       function summon(){
                .dislplay=inline-block;
