--- a/index.html
+++ b/index.html
@@ -296,7 +296,16 @@
         <div class="ADSR">音量</div> <div class="ADSR">A</div> <div class="ADSR">D</div> <div class="ADSR">S</div> <div class="ADSR">Pitch</div>
         <div class="bottom-partten">a</div> <div class="bottom-partten">b</div> <div class="bottom-partten">c</div> <div class="bottom-partten">d</div><div class="bottom-partten">e</div><div class="bottom-partten">f</div><div class="bottom-partten">g</div><div class="bottom-partten">h</div>
       </div>
-    </div><style>
+    </div>
+    <!--nanoloop波形调制区-->
+    <div><button onclick="change()">SAW</button>
+      <div></div>
+      <div> <div class="note-block"></div></div>
+    <div>
+      <div>音量</div><div>A</div><div>D</div><div>S</div><div>R</div>
+      </div>
+    </div>
+    <style>
     /*九宫格主音符编辑区*/
     .nine-block{
       width:20px;height:20px;
