--- a/index.html
+++ b/index.html
@@ -315,6 +315,8 @@
                 display:inline-block;
                 width:20px;height:20px;
     }
+      /*ADSR*/
+      .ADSR{display:inline-block;width:20px;height:20px;}
     </style>
     <script>
       function summon(){
