--- a/index.html
+++ b/index.html
@@ -120,10 +120,12 @@
     <!--游戏类-->
     <a class="mainlink" href="https://cn.codecombat.com/" target="_blank">编程游戏</a>
     <a class="mainlink" href="https://www.cngal.org/" target=""_blank>中文GalGame资源站</a>
+    <a class="mainlink" href="https://itch.io/" target="_blank">itch.io-免费游戏下载、分享、上传</a>
     <!--轻小说-->
     <a class="mainlink" href="http://book.suixw.com/" target="_blank">随想轻小说</a>
     <a class="mainlink" href="http://www.360doc.com/content/15/0219/20/9060464_449471573.shtml" target="_blank">网易云音乐MP3网址外链转换</a>
     <a class="mainlink" href="ngnl.jp" target="_blank">No game No life-游戏人生官方网站</a>
+    <a class="mainlink" href="http://www.geekfans.com/" target="_blank">极客迷</a>
     </br>
    <!--弹幕类-->
     <a class="mainlink" href="http://www.bilibili.com" target="_blank">哔哩哔哩</a>
@@ -141,7 +143,8 @@
   <a class="mainlink" href="http://iirose.com/" target="_blank">蔷薇花园聊天室</a>
   <a class="mainlink" href="http://www.jpbeta.net/" target="_blank">JPbeta多元化日本文化资讯站</a>
   <!--趣味测试类-->
-  <a href="http://test.3uol.com/2561.html" target="_blank">测测你是否有一个少女心</a>  
+  <a class="mianlink" href="http://test.3uol.com/2561.html" target="_blank">测测你是否有一个少女心</a>
+  <a class="mainlink" href="" target="_blank"></a>
   </nav>
   <!--背景音乐-->
   <audio id="backgroundmusic" src="http://link.hhtjim.com/163/496869523.mp3" controls="controls"></audio><!--背景音乐-->
