--- a/index.html
+++ b/index.html
@@ -230,6 +230,7 @@
       <a>洛克王国</a><a href="http://17roco.qq.com/" target="_blank"><img src="http://t10.baidu.com/it/u=2957230950,3989048635&fm=96"/></a>
       <a>小鳄鱼爱洗澡</a>
       <a>植物大战僵尸2</a>
+      <a href="https://www.appinn.com/powder-game/">粉末游戏</a>
     </div>
     <!--动漫op音乐推荐-->
     <div>
@@ -318,6 +319,12 @@
                 display:inline-block;
                 width:20px;height:20px;
     }
+      /*底部片段*/
+      .bottom-partten{
+                display:inline-block;
+                width:20px;
+                height:20px;
+      }
       /*ADSR*/
       .ADSR{display:inline-block;width:20px;height:20px;}
     </style>
