--- a/index.html
+++ b/index.html
@@ -291,10 +291,9 @@
     <div>
       <!--仿nanoloop-->
       <div><div class="master-partten">1</div><div class="master-partten">2</div><div class="master-partten">3</div><div class="master-partten">4</div><div class="master-partten">5</div><div class="master-partten">6</div><div class="master-partten">7</div><div class="master-partten">8</div></div>
-        <div class="nine-block"> </div><div class="nine-block"> </div><div class="nine-block"></div> 
-        <div class="nine-block"></div> 
-        <div class="nine-block"></div> <div class="nine-block"></div> <div class="nine-block"></div> <div class="nine-block"></div> 
-        <div class="nine-block"></div> 
+        <div class="nine-block"></div> <div class="nine-block"></div> <div class="nine-block"></div><br/>
+        <div class="nine-block"></div> <div class="nine-block"></div> <div class="nine-block"></div><br/>
+        <div class="nine-block"></div> <div class="nine-block"></div> <div class="nine-block"></div><br/>
       <!--音量、音调、ADSR等控制-->
       <div>
         <div class="ADSR">音量</div> <div class="ADSR">A</div> <div class="ADSR">D</div> <div class="ADSR">S</div> <div class="ADSR">Pitch</div>
@@ -312,7 +311,8 @@
     <style>
     /*九宫格主音符编辑区*/
     .nine-block{
-      width:20px;height:20px;
+      width:20px;
+      height:20px;
       display:inline-block;}
     /*顶部总片段*/
     .master-partten{
