--- a/index.html
+++ b/index.html
@@ -289,6 +289,10 @@
       <p>开源免费音乐工作站软件：<a href="https://helioworkstation.com/" target="_blank">Heillo<img src="https://helioworkstation.com/favicon-32x32.png"/></a></p>
     </div>
     <div>
+      <a href="https://aidn.jp/nyancat/" target="_blank">
+        <img src="https://aidn.jp/daniwell/shared/img/nyancat.gif"/>
+      </a></div>
+    <div>
       <!--仿nanoloop-->
       <div><div class="master-partten">1</div><div class="master-partten">2</div><div class="master-partten">3</div><div class="master-partten">4</div><div class="master-partten">5</div><div class="master-partten">6</div><div class="master-partten">7</div><div class="master-partten">8</div></div>
         <div class="nine-block"></div> <div class="nine-block"></div> <div class="nine-block"></div><br/>
