--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <meta charset="utf-8">
+  <meta charset="utf-8"><meta keywords="音乐,ACG">
   <link rel="shortcut icon" href="https://avatars2.githubusercontent.com/u/29478722?s=400&u=9f622f7f31db7059fbbe8eba6c8571b5c61c7066&v=4"/><!--网页缩略图-->
   <link rel="stylesheet" href="/css/test.css"/>
   <script src="/js/test.js"></script>
@@ -291,6 +291,7 @@
     <div>
       <a href="https://aidn.jp/nyancat/" target="_blank">
         <img src="https://aidn.jp/daniwell/shared/img/nyancat.gif"/>
+        <a href="https://zh.wikisource.org/wiki/Wikisource:%E9%A6%96%E9%A1%B5" target="_blank">维基文库</a>
       </a></div>
     <div>
       <!--仿nanoloop-->
