--- a/index.html
+++ b/index.html
@@ -291,8 +291,8 @@
     <div>
       <a href="https://aidn.jp/nyancat/" target="_blank">
         <img src="https://aidn.jp/daniwell/shared/img/nyancat.gif"/>
-        <a href="https://zh.wikisource.org/wiki/Wikisource:%E9%A6%96%E9%A1%B5" target="_blank">维基文库</a>
-      </a></div>
+        </a>
+      <a href="https://zh.wikisource.org/wiki/Wikisource:%E9%A6%96%E9%A1%B5" target="_blank">维基文库</a></div>
     <div>
       <!--仿nanoloop-->
       <div><div class="master-partten">1</div><div class="master-partten">2</div><div class="master-partten">3</div><div class="master-partten">4</div><div class="master-partten">5</div><div class="master-partten">6</div><div class="master-partten">7</div><div class="master-partten">8</div></div>
