--- a/index.html
+++ b/index.html
@@ -292,8 +292,10 @@
       <a href="https://aidn.jp/nyancat/" target="_blank">
         <img src="https://aidn.jp/daniwell/shared/img/nyancat.gif"/>
         </a>
-      <a href="https://zh.wikisource.org/wiki/Wikisource:%E9%A6%96%E9%A1%B5" target="_blank">维基文库</a></div>
+      <a href="https://zh.wikisource.org/wiki/Wikisource:%E9%A6%96%E9%A1%B5" target="_blank">维基文库</a>
+      <a href="https://zh.wikibooks.org/wiki/Wikibooks:%E9%A6%96%E9%A1%B5" target="_blank">维基教科书</a></div>
     <div>
+      <a href="http://mp.weixin.qq.com/s?__biz=MzA5MjA5MDEwNw==&mid=200620766&idx=3&sn=714925851b11bee130cd414fe089fdf5" targte="_blank">由于要准备新连载，美水镜将暂停连载漫画《幸运星》</a>
       <!--仿nanoloop-->
       <div><div class="master-partten">1</div><div class="master-partten">2</div><div class="master-partten">3</div><div class="master-partten">4</div><div class="master-partten">5</div><div class="master-partten">6</div><div class="master-partten">7</div><div class="master-partten">8</div></div>
         <div class="nine-block"></div> <div class="nine-block"></div> <div class="nine-block"></div><br/>
