--- a/index.html
+++ b/index.html
@@ -304,6 +304,9 @@
       <a href="http://www.html5star.com/manual/html5label-meaning/" target="_blank">html5元素周期表</a><br/>
       用100个振荡器调制音色——转自midifan
       <a href="https://www.midifan.com/modulenews-detailview-28226.htm" target="_blank"><img src="https://image.midifan.com/data/attach/album/2017/1120/8013_1511164959.jpg"/></a>
+    <br/>
+      <a href="https://zh.wikihow.com/%E7%94%BB%E6%BC%AB%E7%94%BB%E5%A5%B3%E5%AD%A9" target="_blank">wiki-how-如何画漫画女孩</a>
+      <img src="https://www.wikihow.com/images_en/thumb/8/86/Draw-an-Anime-Girl-Step-16-Version-2.jpg/v4-900px-Draw-an-Anime-Girl-Step-16-Version-2.jpg"/>
     </div>
       <!--仿nanoloop-->
       <div><div class="master-partten">1</div><div class="master-partten">2</div><div class="master-partten">3</div><div class="master-partten">4</div><div class="master-partten">5</div><div class="master-partten">6</div><div class="master-partten">7</div><div class="master-partten">8</div></div>
