--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
   <a class="mainlink" href="http://iirose.com/" target="_blank">蔷薇花园聊天室</a>
   <a class="mainlink" href="http://www.jpbeta.net/" target="_blank">JPbeta多元化日本文化资讯站</a>
   <!--趣味测试类-->
-  <a class="mianlink" href="http://test.3uol.com/2561.html" target="_blank">测测你是否有一个少女心</a>
-  <a class="mainlink" href="" target="_blank"></a>
+  <a class="mainlink" href="http://test.3uol.com/2561.html" target="_blank">测测你是否有一个少女心</a>
+  <a class="mainlink" href="https://www.arealme.com/career/cn/" target="_blank">测测适合你的职业</a>
   </nav>
   <!--背景音乐-->
   <audio id="backgroundmusic" src="http://link.hhtjim.com/163/496869523.mp3" controls="controls"></audio><!--背景音乐-->
