--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
   <a href="" target="_blank">《笨蛋，测试，召唤兽》</a>
   <img src="https://i0.hdslb.com/bfs/bangumi/ac94186b0e560932ea4f475348d410db0c53e28a.jpg_225x300.jpg"/>
   <a href="http://bangumi.bilibili.com/anime/425" target="_blank">《某科学的超电磁炮》</a>
-  <img src="https://i0.hdslb.com/bfs/bangumi/1ba189ac8338939b7e07f3bae072a32efe6d8c1a.jpg@110w_144h_75Q_1c.webp"/>
+  <img src="https://raw.githubusercontent.com/2439905184/io.images/master/animation/xuanyuangudao.jpg"/>
   <a href="http://bangumi.bilibili.com/anime/2592" target="_blnak">《学园孤岛》<a>
    搞笑装逼番<a href="http://bangumi.bilibili.com/anime/3450" target="_blank">《在下坂本，有何贵干》</a>
     <img src="https://i0.hdslb.com/bfs/bangumi/14ba6643f22405e2777cca992002cc6411601334.jpg_225x300.jpg"/>
