--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
   <img src="https://raw.githubusercontent.com/2439905184/io.images/master/animation/xuanyuangudao.jpg"/>
   <a href="http://bangumi.bilibili.com/anime/2592" target="_blnak">《学园孤岛》<a>
    搞笑装逼番<a href="http://bangumi.bilibili.com/anime/3450" target="_blank">《在下坂本，有何贵干》</a>
-    <img src="https://raw.githubusercontent.com/2439905184/io.images/master/animation/zaixiabanbeng.jpg/>
+    <img src="https://raw.githubusercontent.com/2439905184/io.images/master/animation/zaixiabanbeng.jpg"/>
       <a href="https://bangumi.bilibili.com/anime/5027?from=search&seid=14874031288505190629" target="_blank">《New Game》</a>
     <img src="https://i0.hdslb.com/bfs/bangumi/f62141fc96b146532480be8851efc8c3a94eedec.jpg_225x300.jpg"/>
     <a href="http://bangumi.bilibili.com/anime/980" target="_blank">《MM一族》</a>
