--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
     <a href="" target="_blank">《可塑性记忆》</a>
     <img src="https://i0.hdslb.com/bfs/bangumi/3e688cd89f778968bdf6f6d9ca6f3d20b76f04ea.jpg_225x300.jpg"/>
     <a href="https://bangumi.bilibili.com/anime/959?from=search&seid=5559284170557433515" target="_blank">《Angel Beats》</a>
-    <img src="https://i0.hdslb.com/bfs/bangumi/803ee7dc0e151ea3f634fe49e73d3b3fb93ca433.jpg_225x300.jpg"/>
+    <img src="https://raw.githubusercontent.com/2439905184/io.images/master/animation/803ee7dc0e151ea3f634fe49e73d3b3fb93ca433.jpg_225x300.jpg"/>
   </div><div id="suggest-game"><!--游戏推荐-->
       <a href="https://www.mojang.com/" target="_blank">我的世界</a>
       <a>机械迷城</a>
