--- a/index.html
+++ b/index.html
@@ -243,7 +243,10 @@
     <div>
    动漫ed推荐：《GOSICK》
    </div>
-    <!---->
+    <!--电子合成器电路-->
+    <div>
+        最简单的振荡电路——LC电路和RC电路
+    </div>
     
     
     <!--电音推荐-->
