--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
    </div>
     <!--电子合成器电路-->
     <div>
-        最简单的振荡电路——LC电路和RC电路
+        最简单的振荡电路——LC电路（由电感和电容组成的电路，多用于高频）和RC电路（由电容和电阻组成的电路，多用于低频）
     </div>
     
     
