--- a/index.html
+++ b/index.html
@@ -124,6 +124,9 @@
     <a class="mainlink" href="https://itch.io/" target="_blank">itch.io-免费游戏下载、分享、上传</a>
     <!--轻小说-->
     <a class="mainlink" href="http://book.suixw.com/" target="_blank">随想轻小说</a>
+    <!--日本轻小说网站-->
+    <a class="mainlink" href="http://www.mediafactory.co.jp/bunkoj/#" target="_blank">MF文库</a>
+    <img>
     <a class="mainlink" href="http://www.360doc.com/content/15/0219/20/9060464_449471573.shtml" target="_blank">网易云音乐MP3网址外链转换</a>
     <a class="mainlink" href="http://ngnl.jp" target="_blank">No game No life-游戏人生官方网站</a>
     <a class="mainlink" href="http://www.geekfans.com/" target="_blank">极客迷</a>
