--- a/index.html
+++ b/index.html
@@ -117,6 +117,9 @@
     <a class="mainlink" href="http://www.haruhi.tv/" target="_blank"><img src="http://www.haruhi.tv/img/zozlogo.jpg"/>SOS团 凉宫春日的忧伤官方网站</a>
     <a class="mainlink" href="http://mv.avex.jp/ga/" target="_blank">GA艺术科美术生官方网站</a>
     <a class="mainlink" href="http://www.roame.net/" target="_blank">路游动漫图片壁纸网</a>
+    <!--漫画类-->
+    
+    <!--软件类-->
     <a class="mainlink" href="https://s3.amazonaws.com/psiphon/web/1ief-w524-5l3c/zh/download.html" target="_blank">vpn</a>
     <!--游戏类-->
     <a class="mainlink" href="https://cn.codecombat.com/" target="_blank">编程游戏</a>
