--- a/index.html
+++ b/index.html
@@ -153,6 +153,8 @@
   <a class="mainlink" href="http://test.3uol.com/2561.html" target="_blank">测测你是否有一个少女心</a>
   <a class="mainlink" href="https://www.arealme.com/career/cn/" target="_blank">测测适合你的职业</a>
   </nav>
+  <!--动漫相关资讯滚动栏↓-->
+<marquee direction="left">要输入的fff文字</marquee>
   <!--背景音乐-->
   <audio id="backgroundmusic" src="http://link.hhtjim.com/163/496869523.mp3" controls="controls"></audio><!--背景音乐-->
 <div style="background:pink;width:500px;">播放列表
