--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
   <a class="mainlink" href="https://www.arealme.com/career/cn/" target="_blank">测测适合你的职业</a>
   </nav>
   <!--动漫相关资讯滚动栏↓-->
-<marquee direction="left">要输入的fff文字</marquee>
+<marquee direction="left">让橘里橘气的更加真实，Citrus 动画制作人永谷敬之谈本作设置辣妹监修</marquee>
   <!--背景音乐-->
   <audio id="backgroundmusic" src="http://link.hhtjim.com/163/496869523.mp3" controls="controls"></audio><!--背景音乐-->
 <div style="background:pink;width:500px;">播放列表
