--- a/index.html
+++ b/index.html
@@ -154,7 +154,10 @@
   <a class="mainlink" href="https://www.arealme.com/career/cn/" target="_blank">测测适合你的职业</a>
   </nav>
   <!--动漫相关资讯滚动栏↓-->
-<marquee direction="left"><a href="http://www.acgdoge.net/archives/24443" target="_blank">让橘里橘气的更加真实，Citrus 动画制作人永谷敬之谈本作设置辣妹监修</a></marquee>
+<marquee direction="left">
+  <a href="http://www.acgdoge.net/archives/24443" target="_blank">让橘里橘气的更加真实，Citrus 动画制作人永谷敬之谈本作设置辣妹监修</a>
+  <a href="http://acg.178.com/201803/314486457588.html" target="_blank">可爱翻倍~「小木乃伊来我家」联动「Fun！Fun！FantasyTheater」~</a>
+  </marquee>
   <!--背景音乐-->
   <audio id="backgroundmusic" src="http://link.hhtjim.com/163/496869523.mp3" controls="controls"></audio><!--背景音乐-->
 <div style="background:pink;width:500px;">播放列表
