--- a/index.html
+++ b/index.html
@@ -305,7 +305,16 @@
     </div>
     <div>
       <a href="https://aidn.jp/nyancat/" target="_blank">
-        <img src="https://aidn.jp/daniwell/shared/img/nyancat.gif"/>
+        <!--彩虹猫动图↓-->
+        <img id="nay-cat" src="https://aidn.jp/daniwell/shared/img/nyancat.gif"/>
+        <style>
+          #nay-cat{
+            position:fixed;
+            z-index:2;
+            animation:fly 5s infinite;}
+          @keyframes fly{}
+        </style>
+        <!--彩虹猫结束-->
         </a>
       <a href="https://zh.wikisource.org/wiki/Wikisource:%E9%A6%96%E9%A1%B5" target="_blank">维基文库</a>
       <a href="https://zh.wikibooks.org/wiki/Wikibooks:%E9%A6%96%E9%A1%B5" target="_blank">维基教科书</a></div>
