--- a/index.html
+++ b/index.html
@@ -310,7 +310,8 @@
         <style>
           #nay-cat{
             position:fixed;
-            z-index:2;
+            top:0;
+            z-index:0;
             animation:fly 5s infinite;}
           @keyframes fly{}
         </style>
