--- a/index.html
+++ b/index.html
@@ -313,7 +313,9 @@
             top:0;
             z-index:0;
             animation:fly 5s infinite;}
-          @keyframes fly{}
+          @keyframes fly{
+            from{margin-left:0px;}
+            to{margin-left:800px;}}
         </style>
         <!--彩虹猫结束-->
         </a>
