--- a/index.html
+++ b/index.html
@@ -394,5 +394,8 @@
       width:500px;}
     .game{width:120px;}
   </style>
-  
+  <!--CSS动画测试-->
+  <div id="square">
+    <div id="circle"></div>
+  </div>
 </html>
