--- a/index.html
+++ b/index.html
@@ -399,4 +399,8 @@
     <div id="circle"></div>
   </div>
   <div>尝试用气味像音乐或美术一样做像艺术一样的东西，比如让气味的酸甜苦辣咸有规律的替换</div>
+  <!--图层测试-->
+  <div>
+  <img src=""/>
+  </div>
 </html>
