--- a/index.html
+++ b/index.html
@@ -152,6 +152,8 @@
   <!--趣味测试类-->
   <a class="mainlink" href="http://test.3uol.com/2561.html" target="_blank">测测你是否有一个少女心</a>
   <a class="mainlink" href="https://www.arealme.com/career/cn/" target="_blank">测测适合你的职业</a>
+  <!--趣味科普-->
+  <a href="http://ncase.me/neurons/" target="_blank">神经元——趣味科普——可互动</a>
   </nav>
   <!--动漫相关资讯滚动栏↓-->
 <marquee direction="left">
