--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
  
   </head><body>
   <h1 align="center">1288hh的个人小站</h1><!--标题居中-->
-  <a class-"mainlink">个人笔记</a>
+  <a class="mainlink">个人笔记</a>
  
   旧网站入口
   <!--在easypage上的旧网页链接--><a class="new" href="http://easypage.com/0N0K0R0C0T5W7F2H/fqukf" target="_blank" style="display:inline;"><img src="https://easypage.com/asset/front/img/ico/favicon.png"/>
@@ -119,7 +119,7 @@
     <a class="mainlink" href="http://mv.avex.jp/ga/" target="_blank">GA艺术科美术生官方网站</a>
     <a class="mainlink" href="http://www.roame.net/" target="_blank">路游动漫图片壁纸网</a>
     <!--漫画类-->
-    <a href="http://www.dm5.com/manhua-charlotte-sigemanhua-chaoyueqingchunba/" target="balnk">Charlottle</a>
+    <a class="mainlink" href="http://www.dm5.com/manhua-charlotte-sigemanhua-chaoyueqingchunba/" target="balnk">Charlottle四格漫画</a>
     <!--软件类-->
     <a class="mainlink" href="https://s3.amazonaws.com/psiphon/web/1ief-w524-5l3c/zh/download.html" target="_blank">vpn</a>
     <!--游戏类-->
