--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
   </div>
   <div>尝试用气味像音乐或美术一样做像艺术一样的东西，比如让气味的酸甜苦辣咸有规律的替换</div>
   <!--图层测试-->
-  <div>
+  <div>巧开夏威夷果——用硬币
   <img src=""/>
   </div>
 </html>
