--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <title>1288hh的个人小站</title>
   
   <style>
+    body{
+      background:url("http://tc.ffsky.net/images/2017/05/16/c962daac9b3a9baeb24c9a2c25f38b0f.jpg");}
     nav{
              background:orange;
     }
