--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   
   <style>
     body{
-      background:url("http://tc.ffsky.net/images/2017/05/16/c962daac9b3a9baeb24c9a2c25f38b0f.jpg");}
+      background:url("http://tc.ffsky.net/images/2017/05/16/c962daac9b3a9baeb24c9a2c25f38b0f.jpg");
+      background-size:auto;}
     nav{
              background:orange;
     }
