--- a/index.html
+++ b/index.html
@@ -399,6 +399,7 @@
     #suggest-animation{
       display:inline-block;
       width:400px;
+      background-image:url("http://tc.ffsky.net/images/2017/02/13/ba59429dedcda4310e970fd48e413e2b.png");
     }
     #suggest-game{
       display:inline-block;
