--- a/index.html
+++ b/index.html
@@ -416,4 +416,17 @@
   <div>巧开夏威夷果——用硬币
   <img src=""/>
   </div>
+    <div>
+   CD4017-十进制计数器使用教程：
+              CD4017一共有16个引脚，1脚为电源输入端，16脚为电源输出端。CD4017一共有3个控制输入端，1个计时完成输出端，其余的为计数输出端。
+           使用CD4017时的注意事项：不用的输入端要接地，接地的电路中要接电阻，否则会形成短路。如果用按钮来进行输入，需要在按钮两端加上无极性电容来滤波，
+           目的在于防止按钮抖动，提供更稳定的脉冲输入。可以使用NE555芯片做一个时钟电路，然后把输出端接到CD4017的CP计数端上。这样就实现了自动计数的功能。
+    </div>
+    
+    <div>
+    CD4069-六非门逻辑电路使用教程：
+                CD4069一共有6个非门，用户可以选择全部使用或者部分使用。非门的作用是对电路信号做相反处理。如果非门的输入端为1，则输出端为0。如果输入端为0，
+             那么输入端为1。也就是说，输入端与输出端的信号是相反的。如果觉得文字理解不了，可以试试我的世界这款游戏，逻辑门中的特性和MC中的红石火把的特性是一样的。
+      
+    </div>
 </html>
