--- a/index.html
+++ b/index.html
@@ -344,7 +344,9 @@
       <a href="https://www.midifan.com/modulenews-detailview-28226.htm" target="_blank"><img src="https://image.midifan.com/data/attach/album/2017/1120/8013_1511164959.jpg"/></a>
     <br/>
       <a href="https://zh.wikihow.com/%E7%94%BB%E6%BC%AB%E7%94%BB%E5%A5%B3%E5%AD%A9" target="_blank">wiki-how-如何画漫画女孩</a>
-      <img style="width:50px;" src="https://www.wikihow.com/images_en/thumb/8/86/Draw-an-Anime-Girl-Step-16-Version-2.jpg/v4-900px-Draw-an-Anime-Girl-Step-16-Version-2.jpg"/>
+      <!--不笑猫的图像-->
+      <img id="cat" style="width:50px;" src="https://www.wikihow.com/images_en/thumb/8/86/Draw-an-Anime-Girl-Step-16-Version-2.jpg/v4-900px-Draw-an-Anime-Girl-Step-16-Version-2.jpg"/>
+      <style>.cat:hover{width:500px;}</style>
     </div>
       <!--仿nanoloop-->
       <div><div class="master-partten">1</div><div class="master-partten">2</div><div class="master-partten">3</div><div class="master-partten">4</div><div class="master-partten">5</div><div class="master-partten">6</div><div class="master-partten">7</div><div class="master-partten">8</div></div>
